feat: implementação de funcionalidade para enviar eventos para o ms-agendamento
