# src/main/resources/swagger-ui/swagger.yaml
@@ -164,6 +164,13 @@ components:
       type: object
       description: Evento de agendamento publicado via mensageria
       properties:
+        idAgendamento:
+          type: integer
+          format: int64
+          example: 1
+        cns:
+          type: string
+          example: 123456789012345
         sugestaoConduta:
           type: string
           example: MANTER_FLUXO_PADRAO
